# MQShrinkWrap

./: CMakeLists.txt  LICENSE  LICENSE.3bsd.txt  LICENSE.gpl.txt  LICENSE.txt  MQShrinkWrap.cpp  README.md  RunCmd.h  install  test.mqo
